# athens_backend

./: .gitignore  Cargo.toml  Rocket.toml  aliza_bot.nginx.conf  auc_emotion_personality_map.json  example.json  settings.toml.example  test.http
src/: api.rs  db.rs  email.rs  face.rs  google.rs  logger.rs  mail.rs  main.rs  schema.sql  settings.rs
static/: hello.html  home.html  index.html  map.html  stats.html
static/essays/: Agreeable.html  Conscientious.html  Extroverted.html  Neurotic.html  Open.html  first_essay.html  second_essay.html  third_essay.html
static/templates/: email.html  personality_email.html
