[package]
name = "athens_backend"
version = "0.1.0"
authors = ["Maksim <maksim.levental@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = "0.7.8"
rusqlite = "0.14.0"
maplit = "1.0.1"
sendgrid = "0.7.1"
oauth2 = "1.3.0"
unidecode = "0.3.0"
simplelog = "0.5.2"
log = "0.4.5"
config = "0.9"
lazy_static = "1.1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
